[gd_scene load_steps=3 format=3 uid="uid://cjqv8h3x5y9wk"]

[ext_resource type="Script" path="res://scripts/ui/champion_display.gd" id="1_champion_display"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_highlight"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 0, 0)

[node name="ChampionDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 200.0
script = ExtResource("1_champion_display")

[node name="HighlightBorder" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_highlight")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Portrait" type="ColorRect" parent="VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
color = Color(0.7, 0.7, 0.7, 1)

[node name="ChampionInfoContainer" type="VBoxContainer" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBoxContainer/HeaderContainer/ChampionInfoContainer"]
layout_mode = 2
text = "Champion"
horizontal_alignment = 1

[node name="HPSection" type="HBoxContainer" parent="VBoxContainer/HeaderContainer/ChampionInfoContainer"]
layout_mode = 2

[node name="HPBar" type="ProgressBar" parent="VBoxContainer/HeaderContainer/ChampionInfoContainer/HPSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPText" type="Label" parent="VBoxContainer/HeaderContainer/ChampionInfoContainer/HPSection"]
layout_mode = 2
text = "100/100"

[node name="BlockIndicator" type="Label" parent="VBoxContainer/HeaderContainer/ChampionInfoContainer"]
layout_mode = 2
text = "Block: 0"
visible = false

[node name="QueuedActionLabel" type="Label" parent="VBoxContainer/HeaderContainer/ChampionInfoContainer"]
layout_mode = 2
text = ""
visible = false
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1

[node name="StatusIconsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AttackButton" type="Button" parent="VBoxContainer/ActionButtonsContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Attack"

[node name="DefendButton" type="Button" parent="VBoxContainer/ActionButtonsContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Defend"
